--- a/android_studio_study/AiEng_v2_03/app/src/main/res/layout/activity_mastercard.xml
+++ b/android_studio_study/AiEng_v2_03/app/src/main/res/layout/activity_mastercard.xml
@@ -146,377 +146,29 @@
 
     <LinearLayout
         android:id="@+id/tablelayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="387dp"
         android:layout_margin="20dp"
         android:layout_marginBottom="0dp"
         android:orientation="horizontal">
 
-        <ScrollView
-            android:id="@+id/viewContentOne"
+        <Button
+            android:id="@+id/button4"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/border_black"
-                android:padding="10dp"
-                android:shrinkColumns="0,1,2,3,4,5,6,7">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Button
-                        android:id="@+id/c1"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c2"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c3"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c4"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c5"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c6"
-                        android:layout_height="80dp" />
-
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Button
-                        android:id="@+id/c7"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c8"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c9"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c10"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c11"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c12"
-                        android:layout_height="80dp" />
-
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Button
-                        android:id="@+id/c13"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c14"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c15"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c16"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c17"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c18"
-                        android:layout_height="80dp" />
-
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Button
-                        android:id="@+id/c19"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c20"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c21"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c22"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c23"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c24"
-                        android:layout_height="80dp" />
-
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Button
-                        android:id="@+id/c25"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c26"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c27"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c28"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c29"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c30"
-                        android:layout_height="80dp" />
-
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Button
-                        android:id="@+id/c31"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c32"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c33"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c34"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c35"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c36"
-                        android:layout_height="80dp" />
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Button
-                        android:id="@+id/c37"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c38"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c39"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c40"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c41"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c42"
-                        android:layout_height="80dp" />
-
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Button
-                        android:id="@+id/c43"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c44"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c45"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c46"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c47"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c48"
-                        android:layout_height="80dp" />
-
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Button
-                        android:id="@+id/c49"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c50"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c51"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c52"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c53"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c54"
-                        android:layout_height="80dp" />
-
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Button
-                        android:id="@+id/c55"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c56"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c57"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c58"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c59"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c60"
-                        android:layout_height="80dp" />
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-
-                    <Button
-                        android:id="@+id/c61"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c62"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c63"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c64"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c65"
-                        android:layout_height="80dp" />
-
-                    <Button
-                        android:id="@+id/c66"
-                        android:layout_height="80dp" />
-
-
-                </TableRow>
-            </TableLayout>
-        </ScrollView>
+            android:layout_height="wrap_content"
+            android:text="덱1" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/blacktatori"
+            android:padding="10dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
+
+    />
 
     <LinearLayout
         android:layout_width="match_parent"
