--- a/android_studio_study/AiEng_v2_03/app/src/main/res/layout/item.xml
+++ b/android_studio_study/AiEng_v2_03/app/src/main/res/layout/item.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView"
+                android:textColor="#FFFFFF"
                 android:textSize="12dp" />
 
             <TextView
@@ -43,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView"
+                android:textColor="#FFFFFF"
                 android:textSize="12dp" />
 
             <TextView
@@ -51,6 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView"
+                android:textColor="#FFFFFF"
                 android:textSize="12dp" />
         </LinearLayout>
 
