--- a/android_studio_study/AiEng_v3_01/app/src/main/res/layout/fragment1.xml
+++ b/android_studio_study/AiEng_v3_01/app/src/main/res/layout/fragment1.xml
@@ -13,7 +13,7 @@
         android:layout_height="10dp"
         android:layout_margin="10dp"
         android:layout_weight="0"
-        android:background="#84FFFF"
+        android:background="#B3ECEC"
         android:orientation="vertical"></LinearLayout>
 
     <TextView
