--- a/android_studio_study/AiEng_v3_01/app/src/main/res/layout/activity_splash.xml
+++ b/android_studio_study/AiEng_v3_01/app/src/main/res/layout/activity_splash.xml
@@ -23,7 +23,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/splash" />
+            app:srcCompat="@drawable/bread" />
 
         <TextView
             android:id="@+id/textView8"
