--- a/android_studio_study/AiEng_v3_01/app/src/main/res/layout/lock.xml
+++ b/android_studio_study/AiEng_v3_01/app/src/main/res/layout/lock.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4B4B4B"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView9"
@@ -13,4 +13,12 @@
         android:paddingTop="200dp"
         android:text="잠금"
         android:textSize="100dp" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="이전 단계를 클리어하세요"
+        android:textSize="17dp" />
 </LinearLayout>
